--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,21 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1><%= kindOfDay %></h1>
-    <ul>
-     <%for(var i=0;i<newListItems.length;i++){%>
-        <li><%=newListItems[i]%></li>
-      <%}%>
-    </ul>
-    <form action="/" method="post">
-      <input type="text" name="newItem" id="" />
-      <button type="submit">Add</button>
-    </form>
-  </body>
-</html>
+<%- include('header'); -%>
+    <div class="box" id="heading">
+      <h1><%= listTitle %></h1>
+    </div>
+    <div class="box">
+     
+        <%for(var i=0;i<newListItems.length;i++){%>
+          <div class="item">
+            <input type="checkbox">
+            <p><%=newListItems[i]%></p>
+          </div>
+           
+         <%}%>
+
+         <form class="item" action="/" method="post">
+          <input type="text" name="newItem" autocomplete="off"  placeholder="New Item" />
+          <button type="submit" name ="list" value =<%=listTitle%>>+</button>
+        </form>
+       
+    </div>
+
+    <%- include('footer'); -%>
+ 
+
+  
